# esp-mesh-lite

./: .gitignore  .gitlab-ci.yml  README.md  README_CN.md  README_cn.md  local.properties
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_example.yml  build_test.yml  upload_component.yml
app/src/main/java/com/espressif/: AppConstants.java
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: preferences.xml
components/mesh_lite/: CHANGELOG.md  CHANGELOG_CN.md  CMakeLists.txt  Kconfig  README.md  README_CN.md  User_Guide.md  User_Guide_CN.md  idf_component.yml
components/mesh_lite/docs/_static/: wireless_debug.drawio
components/mesh_lite/include/: esp_mesh_lite.h  esp_mesh_lite_core.h  esp_mesh_lite_espnow.h  esp_mesh_lite_log.h  esp_mesh_lite_port.h  esp_mesh_lite_wireless_debug.h  mesh_lite.pb-c.h  wifi_prov_mgr.h  zero_provisioning.h
components/mesh_lite/lib/: VERSION
components/mesh_lite/src/: esp_mesh_lite.c  esp_mesh_lite_espnow.c  esp_mesh_lite_log.c  esp_mesh_lite_port.c  esp_mesh_lite_wireless_debug.c  mesh_lite.pb-c.c  mesh_lite.proto  proto_generate_CN.md  proto_generate_EN.md
components/mesh_lite/src/wifi_prov/: manager.c  wifi_prov_mgr.c  wifi_provisioning.patch  zero_provisioning.c
components/wifi_prov_mgr/: CMakeLists.txt  Kconfig
components/wifi_prov_mgr/src/: wifi_prov_mgr.c
components/wifi_provisioning/: Kconfig  VERSION
components/wifi_provisioning/include/wifi_provisioning/: manager.h  scheme_ble.h  scheme_console.h  scheme_softap.h  wifi_config.h  wifi_scan.h
components/wifi_provisioning/proto/: wifi_config.proto
components/wifi_provisioning/proto-c/: constants.pb-c.h  wifi_config.pb-c.c  wifi_config.pb-c.h  wifi_constants.pb-c.c  wifi_constants.pb-c.h  wifi_ctrl.pb-c.c  wifi_ctrl.pb-c.h  wifi_scan.pb-c.c  wifi_scan.pb-c.h
components/wifi_provisioning/python/: wifi_config_pb2.py  wifi_constants_pb2.py  wifi_ctrl_pb2.py  wifi_scan_pb2.py
components/wifi_provisioning/src/: handlers.c  manager.c  scheme_ble.c  scheme_console.c  wifi_config.c  wifi_ctrl.c  wifi_scan.c
examples/mesh_local_control/: CMakeLists.txt  README.md  README_CN.md  README_cn.md  sdkconfig.defaults  sdkconfig.eth
examples/mesh_local_control/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  local_control.c  router_example.c
examples/mesh_wifi_provisioning/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults
examples/mesh_wifi_provisioning/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  local_control.c  mesh_wifi_provisioning.c
examples/no_router/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults
examples/no_router/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  no_router.c
examples/rainmaker/led_light/: README.md  README_CN.md  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
examples/rainmaker/led_light/components/app_bridge/: CMakeLists.txt  app_bridge.c  app_bridge.h  app_mesh_lite_comm.c
examples/rainmaker/led_light/components/app_insights/: app_insights.c  app_insights.h  idf_component.yml
examples/rainmaker/led_light/components/app_light/: CMakeLists.txt  app_light.c  app_light.h
examples/rainmaker/led_light/components/app_rainmaker/: CMakeLists.txt  app_rainmaker.c  app_rainmaker.h  app_rainmaker_ota.c  app_rainmaker_ota_topic.c
examples/rainmaker/led_light/components/app_wifi/: CMakeLists.txt  app_wifi.c  app_wifi.h
examples/rainmaker/led_light/components/group_control/: CMakeLists.txt  app_espnow.c  app_espnow.h
examples/rainmaker/led_light/main/: app_espnow.c  app_espnow.h  app_main.c  idf_component.yml
examples/rainmaker/led_light/partition_table/: partitions_4MB.csv
examples/rainmaker/provisioning_controller/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults
examples/rainmaker/provisioning_controller/main/: CMakeLists.txt  Kconfig.projbuild  app_espnow.c  app_espnow.h  app_main.c  idf_component.yml
examples/rainmaker_led_light/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3
examples/rainmaker_led_light/components/app_bridge/: app_bridge.c  app_bridge.h  app_mesh_lite_comm.c
examples/rainmaker_led_light/components/app_light/: app_light.c  idf_component.yml
examples/rainmaker_led_light/components/app_rainmaker/: CMakeLists.txt  app_rainmaker.c  app_rainmaker_ota.c  app_rainmaker_ota.h  app_rainmaker_ota_topic.c
examples/rainmaker_led_light/components/app_wifi/: app_wifi.c  app_wifi.h
examples/rainmaker_led_light/main/: Kconfig.projbuild  app_espnow.c  app_espnow.h  app_main.c  idf_component.yml
examples/wireless_debug/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.leafnode
examples/wireless_debug/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml  wireless_debug.c
provisioning/src/main/java/com/espressif/provisioning/: ESPConstants.java
provisioning/src/main/proto/: wifi_config.proto
(+2 files in other folders)
